--- a/index.html
+++ b/index.html
@@ -33,14 +33,18 @@
   <div class="container my-5">
     <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
       <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
-        <h1 class="display-4 fw-bold lh-1 text-body-emphasis">Border hero with cropped image and shadows</h1>
-        <p class="lead">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most
-          popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive
-          prebuilt components, and powerful JavaScript plugins.</p>
-        <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
-          <button type="button" class="btn btn-primary btn-lg px-4 me-md-2 fw-bold">Primary</button>
-          <button type="button" class="btn btn-outline-secondary btn-lg px-4">Default</button>
-        </div>
+        <h1 class="display-4 fw-bold">Габилька — живой синоним слова "катастрофа"</h1>
+        <p class="lead mb-4">
+          • Опоздал. <br>
+          • Забыл. <br>
+          • Перепутал. <br>
+          • Обиделся. <br>
+          • Сделал вид, что всё так и планировалось. <br>
+          • Рассказал шутку и только сам посмеялся. <br>
+          • Всё равно умудрился испортить момент.
+        </p>
+        <a href="#timeline" class="btn btn-danger btn-lg">Хронология фейлов</a>
+
       </div>
       <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
         <img class="rounded-lg-3" src="bootstrap-docs.png" alt="" width="720">
