Добавил index.html и картинки

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 
 
 
-
   <div class="container my-5">
     <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
+      <!-- Текстовая часть слева -->
       <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
         <h1 class="display-4 fw-bold">Габилька — живой синоним слова "катастрофа"</h1>
         <p class="lead mb-4">
@@ -44,12 +44,20 @@
           • Всё равно умудрился испортить момент.
         </p>
         <a href="#timeline" class="btn btn-danger btn-lg">Хронология фейлов</a>
-
       </div>
-      <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
-        <img class="rounded-lg-3" src="bootstrap-docs.png" alt="" width="720">
+
+      <!-- Картинка справа -->
+      <div class="col-lg-5 text-center">
+        <img src="assets/images/main.jpg" alt="фотка Габильки" class="img-fluid rounded shadow">
       </div>
     </div>
+  </div>
+
+  </div>
+  <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
+    <img class="rounded-lg-3" src="bootstrap-docs.png" alt="" width="720">
+  </div>
+  </div>
   </div>
 
 
