--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
 
 <head>
   <meta charset="UTF-8">
@@ -16,20 +16,20 @@
       class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none"> <svg
         class="bi me-2" width="40" height="32" aria-hidden="true">
         <use xlink:href="#bootstrap"></use>
-      </svg> <span class="fs-4">Simple header</span> </a>
-    <ul class="nav nav-pills">
-      <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li>
-      <li class="nav-item"><a href="#" class="nav-link">Features</a></li>
-      <li class="nav-item"><a href="#" class="nav-link">Pricing</a></li>
-      <li class="nav-item"><a href="#" class="nav-link">FAQs</a></li>
-      <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+      </svg> <span class="fs-4"></span> </a>
+    <ul class="nav nav-pills justify-content-center w-100"">
+      <li class=" nav-item"><a href="./index.html" class="nav-link active" aria-current="page">Home</a></li>
+      <li class="nav-item"><a href="#" class="nav-link">Таланты\Увлечения</a></li>
+      <li class="nav-item"><a href="./gallety.html" class="nav-link">Галлерея</a></li>
+      <li class="nav-item"><a href="#" class="nav-link">Контакты</a></li>
+
     </ul>
   </header>
 
 
 
 
-  <div class="container my-5">
+  <div class="container my-6">
     <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
       <!-- Текстовая часть слева -->
       <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
@@ -47,7 +47,7 @@
       </div>
 
       <!-- Картинка справа -->
-      <div class="col-lg-5 text-center">
+      <div class="col-lg-4 text-center">
         <img src="assets/images/main.jpg" alt="фотка Габильки" class="img-fluid rounded shadow">
       </div>
     </div>
