--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
     <ul class="nav nav-pills justify-content-center w-100"">
       <li class=" nav-item"><a href="./index.html" class="nav-link active" aria-current="page">Home</a></li>
       <li class="nav-item"><a href="#" class="nav-link">Таланты\Увлечения</a></li>
-      <li class="nav-item"><a href="./gallety.html" class="nav-link">Галлерея</a></li>
+      <li class="nav-item"><a href="./gallery.html" class="nav-link">Галлерея</a></li>
       <li class="nav-item"><a href="#" class="nav-link">Контакты</a></li>
 
+
+      </li>
     </ul>
   </header>
 
@@ -43,7 +45,7 @@
           • Рассказал шутку и только сам посмеялся. <br>
           • Всё равно умудрился испортить момент.
         </p>
-        <a href="#timeline" class="btn btn-danger btn-lg">Хронология фейлов</a>
+        <a href="./Fails.html" class="btn btn-danger btn-lg">Хронология фейлов</a>
       </div>
 
       <!-- Картинка справа -->
