Добавил index.html и картинки

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html lang="en" data-bs-theme="dark">
+<html lang="en">
 
 <head>
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gabilka Ultra Pro Max</title>
@@ -12,23 +13,10 @@
 </head>
 
 <body>
-  <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom"> <a href="/"
-      class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none"> <svg
-        class="bi me-2" width="40" height="32" aria-hidden="true">
-        <use xlink:href="#bootstrap"></use>
-      </svg> <span class="fs-4"></span> </a>
-    <ul class="nav nav-pills justify-content-center w-100"">
-      <li class=" nav-item"><a href="./index.html" class="nav-link active" aria-current="page">Home</a></li>
-      <li class="nav-item"><a href="#" class="nav-link">Таланты\Увлечения</a></li>
-      <li class="nav-item"><a href="./gallery.html" class="nav-link">Галлерея</a></li>
-      <li class="nav-item"><a href="#" class="nav-link">Контакты</a></li>
 
-
-      </li>
-    </ul>
+  <header class="d-flex justify-content-center py-3 mb-4 border-bottom bg-dark text-white">
+    <h1 class="fs-3 text-center">Алкоголик или просто любитель выпить?!</h1>
   </header>
-
-
 
 
   <div class="container my-6">
@@ -45,22 +33,119 @@
           • Рассказал шутку и только сам посмеялся. <br>
           • Всё равно умудрился испортить момент.
         </p>
-        <a href="./Fails.html" class="btn btn-danger btn-lg">Хронология фейлов</a>
       </div>
 
       <!-- Картинка справа -->
       <div class="col-lg-4 text-center">
-        <img src="assets/images/main.jpg" alt="фотка Габильки" class="img-fluid rounded shadow">
+        <!-- <img src="assets/images/main.jpg" alt="фотка Габильки" class="img-fluid rounded shadow"> -->
+        <!-- Карусель картинок -->
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+              aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+              aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+              aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
+              aria-label="Slide 4"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
+              aria-label="Slide 5"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5"
+              aria-label="Slide 6"></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="./assets/images/2.jpg" class="d-block w-100" alt="..."
+                style="object-fit: cover; height: 600px;">
+            </div>
+            <div class="carousel-item">
+              <img src="./assets/images/1.jpg" class="d-block w-100" alt="..." style="object-fit: cover; height:600px;">
+            </div>
+            <div class="carousel-item">
+              <img src="./assets/images/3.jpg" class="d-block w-100" alt="..."
+                style="object-fit: cover; height: 600px;">
+            </div>
+            <div class="carousel-item">
+              <img src="./assets/images/4.jpg" class="d-block w-100" alt="..."
+                style="object-fit: cover; height: 600px;">
+            </div>
+            <div class="carousel-item">
+              <img src="./assets/images/5.jpg" class="d-block w-100" alt="..."
+                style="object-fit: cover; height: 600px;">
+            </div>
+            <div class="carousel-item">
+              <img src="./assets/images/main.jpg" class="d-block w-100" alt="..."
+                style="object-fit: cover; height: 600px;">
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
       </div>
     </div>
   </div>
+  </div>
+  </div>
+  </div>
+  </div>
 
+
+  <div class="container py-4">
+    <header class="pb-3 mb-4 border-bottom"> </header>
+    <div class="p-5 mb-4 bg-body-tertiary rounded-3">
+      <div class="container-fluid py-5">
+        <h1 class="display-5 fw-bold">Алкоголизм — это тяжелое заболевание</h1>
+        <p class="col-md-8 fs-4">Но не приговор, и жизнь с алкогольной зависимостью не является концом, если человек
+          решит обратиться за помощью и пройти лечение. Своевременное лечение может вернуть человека к нормальной жизни,
+          помочь избавиться от пагубного пристрастия и сохранить здоровье и качество жизни.</p>
+
+      </div>
+    </div>
+    <div class="row align-items-md-stretch">
+      <div class="col-md-6">
+        <div class="h-100 p-5 text-bg-dark rounded-3">
+          <h2>Габилька и его 'периоды трезвости'</h2>
+          <p>Габилька утверждает, что не пьёт. Но каждый раз, когда он подходит к холодильнику, мы начинаем сомневаться.
+            Мы тоже
+            пытались верить, но в очередной раз он снова 'забывает' о своих обещаниях.
+            Габилька решил, что пришло время меняться! Но пока что единственное, что он меняет — это фон на своём
+            телефоне. Мы ждём,
+            когда он начнёт менять что-то более важное.</p>
+          <img src="./assets/images/4200791.png" class="d-block w-30" alt="..."
+            style="object-fit: cover; height: 200px;">
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="h-100 p-5 bg-body-tertiary border rounded-3">
+          <h2>Габилька меняет привычки</h2>
+          <h3>Габилька решил, что пришло время меняться!</h3>
+          <p> Но пока что единственное, что он меняет — это фон на своём
+            телефоне. Мы ждём,когда он начнёт менять что-то более важное.</p>
+          <h4>Поможем Габильке вернуться в реальность!</h4>
+          <p>Собираем деньги на реабилитацию Габильки от его главной зависимости — алкоголя. Мы все знаем, что Габилька
+            мог бы быть
+            великим, если бы он хотя бы однажды сказал 'нет' своему бокалу. Давайте вместе поможем ему вернуться к
+            нормальной жизни!</p>
+          <button class="btn btn-outline-secondary" type="button">Внести Пожертвование</button>
+        </div>
+      </div>
+    </div>
+    <footer class="pt-3 mt-4 text-body-secondary border-top">
+      © Created by Hatake92 </footer>
   </div>
-  <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
-    <img class="rounded-lg-3" src="bootstrap-docs.png" alt="" width="720">
-  </div>
-  </div>
-  </div>
+
+
+
+
 
 
 
